force-app/main/default/objects/Cycle_Event__c/fields/Sperm_Final_Witness__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Final_Witness__c</fullName>
    <label>Sperm Final Witness</label>
    <length>20</length>
    <type>Text</type>
</CustomField>