force-app/main/default/objects/Cycle_Event__c/fields/Sperm_Provider__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sperm Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>