force-app/main/default/objects/Cycle_Event__c/fields/Sperm_Sample__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semen Sample</label>
    <referenceTo>Sperm_Sample__c</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>