force-app/main/default/objects/Cycle_Event__c/fields/Sperm_Source_Donor__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Source_Donor__c</fullName>
    <label>Sperm Source Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Known Donor</fullName>
            </value>
            <value>
                <fullName>Open-ID Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>