force-app/main/default/objects/Cycle_Event__c/fields/Sperm_Source_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Source_Frozen__c</fullName>
    <label>Sperm Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>