force-app/main/default/objects/Cycle_Event__c/fields/Sperm_Source_Method__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Source_Method__c</fullName>
    <label>Sperm Supply Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ejaculate</fullName>
            </value>
            <value>
                <fullName>Retrograde</fullName>
            </value>
            <value>
                <fullName>Needle Aspirate</fullName>
            </value>
            <value>
                <fullName>Open Biopsy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>