force-app/main/default/objects/Cycle_Event__c/fields/Straws_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Straws_Frozen__c</fullName>
    <label># Straws Frozen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>