force-app/main/default/objects/Cycle_Event__c/fields/Thaw_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Thaw_Date_Only__c</fullName>
    <formula>DATEVALUE(Date_and_Time_of_Thaw__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thaw Date Only</label>
    <type>Date</type>
</CustomField>