force-app/main/default/objects/Cycle_Event__c/fields/Thaw_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Thaw_Instructions__c</fullName>
    <label>Thaw Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>