force-app/main/default/objects/Cycle_Event__c/fields/TMC_for_Insem__c.field-meta.xml
<CustomField>
    <fullName>TMC_for_Insem__c</fullName>
    <formula>Final_Volume__c  *  Final_Concentration__c  *  Final_Motility__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMC for Insemination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>