force-app/main/default/objects/Cycle_Event__c/fields/Total_Eggs_Expected_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Eggs_Expected_Formula__c</fullName>
    <description>The purpose of this field is soley to display &quot;0&quot; on lab worksheets for expected L, R and Total eggs</description>
    <formula>IF(
    ISBLANK(Number_of_Eggs_Expected__c) || Number_of_Eggs_Expected__c = 0,
    0,
    Number_of_Eggs_Expected__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Eggs Expected Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>