force-app/main/default/objects/Cycle_Event__c/fields/Total_Eggs_Inseminated__c.field-meta.xml
<CustomField>
    <fullName>Total_Eggs_Inseminated__c</fullName>
    <formula>Embryo_Batch__r.Eggs_Inseminated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Eggs Inseminated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>