force-app/main/default/objects/Cycle_Event__c/fields/Transfer_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Difficulty__c</fullName>
    <label>Transfer Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>