force-app/main/default/objects/Cycle_Event__c/fields/Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Trigger Date</label>
    <type>Date</type>
</CustomField>