force-app/main/default/objects/Cycle_Event__c/fields/Trigger_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Nurse__c</fullName>
    <label>Trigger Nurse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nurses</valueSetName>
    </valueSet>
</CustomField>