force-app/main/default/objects/Cycle_Event__c/fields/Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time__c</fullName>
    <label>Trigger Time</label>
    <type>Time</type>
</CustomField>