force-app/main/default/objects/Cycle_Event__c/fields/Trigger_Times__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Times__c</fullName>
    <formula>TIMEVALUE( Procedure_Date_Time__c )+(10/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Times</label>
    <type>Time</type>
</CustomField>