force-app/main/default/objects/Cycle_Event__c/fields/Triggers_Used__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Used__c</fullName>
    <label>Triggers Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>