force-app/main/default/objects/Cycle_Event__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <label>Witness</label>
    <length>50</length>
    <type>Text</type>
</CustomField>