force-app/main/default/objects/Cycle_Event__c/recordTypes/Biopsy.recordType-meta.xml
<RecordType>
    <fullName>Biopsy</fullName>
    <active>true</active>
    <label>Biopsy</label>
</RecordType>