force-app/main/default/objects/Cycle_Event__c/recordTypes/Birth_Outcome.recordType-meta.xml
<RecordType>
    <fullName>Birth_Outcome</fullName>
    <active>true</active>
    <label>Birth Outcome</label>
</RecordType>