force-app/main/default/objects/Cycle_Event__c/recordTypes/Day_1.recordType-meta.xml
<RecordType>
    <fullName>Day_1</fullName>
    <active>true</active>
    <label>Day 1</label>
</RecordType>