force-app/main/default/objects/Cycle_Event__c/recordTypes/Day_5_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Day_5_Assessment</fullName>
    <active>true</active>
    <label>Day 5 Assessment</label>
</RecordType>