force-app/main/default/objects/Cycle_Event__c/recordTypes/Day_6_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Day_6_Assessment</fullName>
    <active>true</active>
    <label>Day 6 Assessment</label>
</RecordType>