force-app/main/default/objects/Cycle_Event__c/recordTypes/Denuding.recordType-meta.xml
<RecordType>
    <fullName>Denuding</fullName>
    <active>true</active>
    <label>Denuding/CockTriming</label>
</RecordType>