force-app/main/default/objects/Cycle_Event__c/recordTypes/Doctor_s_Transfer_Event.recordType-meta.xml
<RecordType>
    <fullName>Doctor_s_Transfer_Event</fullName>
    <active>true</active>
    <label>Doctor&apos;s Transfer Event</label>
</RecordType>