force-app/main/default/objects/Cycle_Event__c/recordTypes/Donate_Eggs_Cycle_Event.recordType-meta.xml
<RecordType>
    <fullName>Donate_Eggs_Cycle_Event</fullName>
    <active>true</active>
    <label>Donate Eggs Cycle Event</label>
</RecordType>