force-app/main/default/objects/Cycle_Event__c/recordTypes/Egg_Thaw_Event.recordType-meta.xml
<RecordType>
    <fullName>Egg_Thaw_Event</fullName>
    <active>true</active>
    <label>Egg Thaw Event</label>
</RecordType>