force-app/main/default/objects/Cycle_Event__c/recordTypes/Embryo_Thawing.recordType-meta.xml
<RecordType>
    <fullName>Embryo_Thawing</fullName>
    <active>true</active>
    <label>Embryo Thawing</label>
</RecordType>