force-app/main/default/objects/Cycle_Event__c/recordTypes/Embryo_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Embryo_Transfer</fullName>
    <active>true</active>
    <label>Embryo Transfer</label>
</RecordType>