force-app/main/default/objects/Cycle_Event__c/recordTypes/Embryo_Vitrification_Freezing.recordType-meta.xml
<RecordType>
    <fullName>Embryo_Vitrification_Freezing</fullName>
    <active>true</active>
    <label>Embryo Vitrification (Freezing)</label>
</RecordType>