force-app/main/default/objects/Cycle_Event__c/recordTypes/Failed_Fert_Sperm_Quality_Check.recordType-meta.xml
<RecordType>
    <fullName>Failed_Fert_Sperm_Quality_Check</fullName>
    <active>true</active>
    <label>Failed Fert - Sperm Quality Check</label>
</RecordType>