force-app/main/default/objects/Cycle_Event__c/recordTypes/Fertilisation_Check.recordType-meta.xml
<RecordType>
    <fullName>Fertilisation_Check</fullName>
    <active>true</active>
    <label>Fertilisation Check</label>
</RecordType>