force-app/main/default/objects/Cycle_Event__c/recordTypes/Insemination.recordType-meta.xml
<RecordType>
    <fullName>Insemination</fullName>
    <active>true</active>
    <label>Insemination</label>
</RecordType>