force-app/main/default/objects/Cycle_Event__c/recordTypes/IUI.recordType-meta.xml
<RecordType>
    <fullName>IUI</fullName>
    <active>true</active>
    <label>IUI</label>
</RecordType>