force-app/main/default/objects/Cycle_Event__c/recordTypes/Laser_Assisted_Hatching.recordType-meta.xml
<RecordType>
    <fullName>Laser_Assisted_Hatching</fullName>
    <active>true</active>
    <label>Laser Assisted Hatching</label>
</RecordType>