force-app/main/default/objects/Cycle_Event__c/recordTypes/Nurse_Medication_Check.recordType-meta.xml
<RecordType>
    <fullName>Nurse_Medication_Check</fullName>
    <active>true</active>
    <label>Nurse Medication Check</label>
</RecordType>