force-app/main/default/objects/Cycle_Event__c/recordTypes/OPU.recordType-meta.xml
<RecordType>
    <fullName>OPU</fullName>
    <active>true</active>
    <label>OPU</label>
</RecordType>