force-app/main/default/objects/Cycle_Event__c/recordTypes/OPU_Preparation_Event.recordType-meta.xml
<RecordType>
    <fullName>OPU_Preparation_Event</fullName>
    <active>true</active>
    <label>Cycle Preparation Event</label>
</RecordType>