force-app/main/default/objects/Cycle_Event__c/recordTypes/Ovulation_Event.recordType-meta.xml
<RecordType>
    <fullName>Ovulation_Event</fullName>
    <active>true</active>
    <label>Ovulation Event</label>
</RecordType>