force-app/main/default/objects/Cycle_Event__c/recordTypes/Post_Thaw_Day_5_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Post_Thaw_Day_5_Assessment</fullName>
    <active>true</active>
    <label>Post Thaw Day 5 Assessment</label>
</RecordType>