force-app/main/default/objects/Cycle_Event__c/recordTypes/Pre_Implantation_Genetic_Testing.recordType-meta.xml
<RecordType>
    <fullName>Pre_Implantation_Genetic_Testing</fullName>
    <active>true</active>
    <label>Pre-Implantation Genetic Testing</label>
</RecordType>