force-app/main/default/objects/Cycle_Event__c/recordTypes/Pregnancy_Scan_Event.recordType-meta.xml
<RecordType>
    <fullName>Pregnancy_Scan_Event</fullName>
    <active>true</active>
    <label>Pregnancy Scan Event</label>
</RecordType>