force-app/main/default/objects/Cycle_Event__c/recordTypes/Sperm_Freeze.recordType-meta.xml
<RecordType>
    <fullName>Sperm_Freeze</fullName>
    <active>true</active>
    <label>Sperm Freeze</label>
</RecordType>