force-app/main/default/objects/Cycle_Event__c/recordTypes/Sperm_Preparation.recordType-meta.xml
<RecordType>
    <fullName>Sperm_Preparation</fullName>
    <active>true</active>
    <label>Sperm Preparation</label>
</RecordType>