force-app/main/default/objects/Cycle_Event__c/recordTypes/Trigger_Event.recordType-meta.xml
<RecordType>
    <fullName>Trigger_Event</fullName>
    <active>true</active>
    <label>Trigger Event</label>
</RecordType>