force-app/main/default/objects/Cycle_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Procedure_Date_Time__c</columns>
    <columns>Procedure_Location__c</columns>
    <columns>Notes__c</columns>
    <columns>Cycle__c</columns>
    <columns>OPU_Scientist__c</columns>
    <columns>Scientist_lookup__c</columns>
    <columns>Scientist_Performing_Event__c</columns>
    <columns>Doctor__c</columns>
    <columns>Doctor_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cycle_Event__c.IUI</value>
    </filters>
    <filters>
        <field>Procedure_Date_ONLY__c</field>
        <operation>equals</operation>
        <value>9/2/2022</value>
    </filters>
    <label>All</label>
</ListView>