force-app/main/default/objects/Cycle_Event__c/listViews/Victoria_s_ETs.listView-meta.xml
<ListView>
    <fullName>Victoria_s_ETs</fullName>
    <columns>NAME</columns>
    <columns>Cycle__c</columns>
    <columns>Procedure_Date_Time__c</columns>
    <columns>Scientist_lookup__c</columns>
    <columns>Doctor_Lookup__c</columns>
    <columns>Procedure_Location__c</columns>
    <columns>Transfer_Difficulty__c</columns>
    <columns>Catheter_Batch_Number__c</columns>
    <columns>Extra_Equipment_Used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cycle_Event__c.Egg_Thaw_Event</value>
    </filters>
    <filters>
        <field>Scientist_Performing_Event__c</field>
        <operation>equals</operation>
        <value>Victoria Rudd</value>
    </filters>
    <label>Victoria&apos;s ETs</label>
</ListView>